# spenzy

./: .gitignore  LICENSE  README.md  pubspec.yaml
datas/ocr_results/: fatura-bermed.ocr  fatura-boyner.ocr  fatura-enerjisa.ocr  fatura-meteor.ocr  fatura-turknet.ocr
ios/Runner/: Info.plist
spenzy-app/: README.md  pubspec.yaml
spenzy-app/android/app/: build.gradle
spenzy-app/ios/Runner/: Info.plist
spenzy-app/ios/Runner.xcodeproj/: project.pbxproj
spenzy-app/lib/: main.dart
spenzy-app/lib/providers/: loading_provider.dart
spenzy-app/lib/screens/: home_screen.dart  welcome_screen.dart
spenzy-app/lib/services/: auth_service.dart  category_service.dart  document_service.dart  expense_service.dart  service_auth.dart  (+1 more)
spenzy-app/linux/: CMakeLists.txt
spenzy-app/proto/: auth.proto  document.proto
spenzy-app/test/: widget_test.dart
spenzy-app/tool/: generate_protos.sh
spenzy-app/web/: index.html  manifest.json
spenzy-app/windows/: CMakeLists.txt
spenzy-common/: pyproject.toml  setup.py
spenzy-common/spenzy_common/auth/: auth_service.py  keycloak_handler.py
spenzy-common/spenzy_common/middleware/: auth_interceptor.py
spenzy-common/spenzy_common/utils/: token_utils.py
spenzy-document-service/: .gitignore  LICENSE  README.md  exec_requirements.sh  requirements.txt  server.py
spenzy-document-service/proto/: __init__.py  document.proto  generate_proto.sh
spenzy-expense-service/: requirements.txt  server.py
spenzy-expense-service/app/: database.py  server.py
spenzy-expense-service/proto/: auth.proto  expense.proto  generate_proto.sh
(+36 files in other folders)
